[package]
name = "rsds"
version = "0.1.0"
authors = ["Stanislav Bohm <spirali@kreatrix.org>"]
edition = "2018"

[dependencies]
futures-preview = "=0.3.0-alpha.18"
tokio = "0.2.0-alpha.1"
bytes = "0.4"
byteorder = "1.3"
smallvec = "0.6"
rmp-serde = "0.13.7"
#rmpv = "*"
log = "0.4"
pretty_env_logger="0.3"
serde = { version = "1.0", features = ["derive"] }
serde_bytes = "0.11"
serde-tuple-vec-map = "0.2"
serde_json = "1.0"
quick-error = "1.2"
rand = "0.7.0"