[package]
name = "rsds"
version = "0.1.0"
authors = ["Stanislav Bohm <spirali@kreatrix.org>"]
edition = "2018"

[dependencies]
futures = "0.3"
tokio = { version= "0.2", features = ["full"] }
tokio-util = { version = "0.2", features = ["codec"] }
bytes = "0.5"
byteorder = "1.3"
smallvec = { version = "1.0", features = ["serde"] }
rmp-serde = "0.13.7"
rmpv = { version = "0.4", features = ["with-serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_bytes = "0.11"
serde-tuple-vec-map = "1"
serde_json = "1.0"
thiserror = "1"
rand = { version = "0.7", features = ["small_rng"] }
structopt = "0.3"
jemallocator = "0.3.2"
hashbrown = { version = "0.6", features = ["serde"] }
pin-project-lite = "0.1"
ctrlc = "3"
log = "0.4"
env_logger = "0.7"
tracing = "0.1"
tracing-subscriber = "0.2"

[dev-dependencies]
maplit = "1.0"
criterion = "0.3"
tempfile = "3"

[[bench]]
name = "reactor"
harness = false

[[bench]]
name = "scheduler"
harness = false

[[bench]]
name = "protocol"
harness = false

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
panic = "abort"

[profile.bench]
incremental = true
